test/files/invalid/include_hint.fbs
include "helpers/include_hint_helper1.fbs";
include "helpers/include_hint_helper2.fbs";